--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.room:room-runtime:2.1.0-alpha04'
     kapt "androidx.room:room-compiler:2.1.0-alpha04"
+
+    implementation "android.arch.lifecycle:reactivestreams:1.1.1"
+    implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
 }
